<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/label_text_view" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/hint_enter_city_name"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/button_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_submit" />

    <Button
        android:id="@+id/button_click_current_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_current_loc_weather" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dip"
        android:text="@string/city_name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/city_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>